Initial React app

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "movie-hub",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://namalkumaraabc.github.io",
+  "homepage": "https://astounding-starship-281d0d.netlify.app",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^7.0.1",
     "@fortawesome/free-solid-svg-icons": "^7.0.1",
